fix(review): Flyway Postgres, payment declines, stack docs
Add flyway-database-postgresql for docker profile, map PaymentGatewayException
to PaymentOutcome.Failed so declines do not trip the circuit breaker, and
align README/AGENTS/ARCHITECTURE with Java 25 + Boot 3.5.

Co-authored-by: Cursor <cursoragent@cursor.com>